aks/externalDns/domain-name-base-route/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-domain
spec:
  ingressClassName: nginx
  rules:
    - host: app1.kubeoncloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-1-myapp
                port: 
                  number: 80
    - host: app2.kubeoncloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-2-myapp
                port: 
                  number: 80
    - host: app3.kubeoncloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-3-myapp
                port: 
                  number: 80
